<resources>
    <string name="app_name">DesenvolvimentoMobile</string>

    <string name="titulo">INSTAPOBRE</string>
    <string name="under_titulo">APP mobile do alunos de ADS-UAM</string>
    <string name="action_settings">Settings</string>
    <string name="sobre">About</string>
    <string name="main_button">Começar!</string>
    <string name="mensagem_sobre1">Felipe Miyai RA: 20351694</string>
    <string name="mensagem_sobre2">Adriana Camargo RA: 20374925</string>
    <string name="mensagem_sobre3">Marco Carneiro RA: 20412086</string>
    <string name="mensagem_sobre4">Marcelo Daparte RA: 20300577</string>
    <string name="mensagem_sobre5">Wendell Queiroz RA: 20419953</string>
    <string name="mensagem_sobre6">Diego Silva RA: 20419953</string>
    <string name="mensagem_sobre7">Murilo Silva RA:  09192168</string>
    <string name="mensagem_sobre8">Alunos do Grupo</string>
    <string name="expName">Alunos do Grupo</string>
    <string name="mn_borda_vertical">Borda Vertical</string>
    <string name="mn_borda_horizontal">Borda Horizontal</string>
    <string name="mn_laplace">Laplaciano</string>
    <string name="mn_negativo">Negativo</string>
    <string name="mn_gray">Tons Cinza</string>
    <string name="mn_histograma">Histograma</string>
    <string name="mn_contraste">Constraste</string>
    <string name="mn_sem_filtro">Normal</string>
    <string name="mn_rgba">Normal</string>
</resources>
