<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CameraActivity">

    <item
        android:id="@+id/rgba"
        android:orderInCategory="100"
        android:title="@string/mn_rgba"
        app:showAsAction="never" />
    <item
        android:id="@+id/negativo"
        android:orderInCategory="100"
        android:title="@string/mn_negativo"
        app:showAsAction="never" />
    <item
        android:id="@+id/laplace"
        android:orderInCategory="100"
        android:title="@string/mn_laplace"
        app:showAsAction="never" />
    <item
        android:id="@+id/cinza"
        android:orderInCategory="100"
        android:title="@string/mn_gray"
        app:showAsAction="never" />
    <item
        android:id="@+id/b_vertical"
        android:orderInCategory="100"
        android:title="@string/mn_borda_vertical"
        app:showAsAction="never" />
    <item
        android:id="@+id/b_horizontal"
        android:orderInCategory="100"
        android:title="@string/mn_borda_horizontal"
        app:showAsAction="never" />
    <item
        android:id="@+id/contraste"
        android:orderInCategory="100"
        android:title="@string/mn_contraste"
        app:showAsAction="never" />
    <item
        android:id="@+id/histograma"
        android:orderInCategory="100"
        android:title="@string/mn_histograma"
        app:showAsAction="never" />
</menu>
