<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#001111">


    <RelativeLayout
        android:layout_width="360px"
        android:layout_height="100px"
        android:background="@drawable/logo"
        android:gravity="center|center_vertical|center_horizontal"
        android:layout_gravity="top"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout">



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="1000px"
        android:layout_height="600px"
        android:background="#778888"
        android:gravity="center|center_vertical|center_horizontal"
        android:layout_gravity="top"
        android:id="@+id/relativeLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView android:text="@string/mensagem_sobre8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-130dp"
            android:textColor="#ff66ff07"
            android:textStyle="bold"
            android:textSize="35dp"
            android:textAlignment="center"
            android:gravity="center_horizontal|top" />
        <TextView android:text="@string/mensagem_sobre1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:layout_marginTop="-85dp"
            android:textColor="#fffdffff"
            android:textStyle="bold" />
        <TextView android:text="@string/mensagem_sobre2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:gravity="center_horizontal"
            android:layout_marginTop="-65dp" />
        <TextView android:text="@string/mensagem_sobre3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-45dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:textStyle="bold" />
        <TextView android:text="@string/mensagem_sobre4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:gravity="center_horizontal"
            android:layout_marginTop="-25dp" />
        <TextView android:text="@string/mensagem_sobre5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:textIsSelectable="false"
            android:textStyle="bold" />
        <TextView android:text="@string/mensagem_sobre6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp" />
        <TextView android:text="@string/mensagem_sobre7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360px"
        android:layout_height="100px"
        android:background="@drawable/home"
        android:gravity="center|center_vertical|center_horizontal"
        android:layout_gravity="top"
        android:id="@+id/relativeLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="botaoExibirNovaTela">

    </RelativeLayout>










</RelativeLayout>
